test/should_not_compile/equality_fn.sml
fun checkEquality (f : unit -> ''a) = f () = f ();
checkEquality (fn () => (fn x => x) : unit -> unit);
